# Serenity

./: .gitignore  BUILD.md  HANDOFF.md  PORT_MAP.md  TENETS.md  TRACEABILITY.md  pixi.toml  serenity_run.sh
docs/: HANDOFF_2026-07-06_fleet_complete_product_wave.md  HANDOFF_2026-07-11_ui_train_for_real.md  HANDOFF_FLUX_2026-06-09.md  HANDOFF_FLUX_2026-06-09_pass2.md  HANDOFF_PARITY_2026-06-08.md  IDEOGRAM4_FLASH_SDPA_WIRING_2026-06-20.md  IDEOGRAM4_PIPELINE.md  IDEOGRAM4_SESSION_HANDOFF_2026-06-20.md  PARITY_GATES.md  SAVE_RESUME_AUDIT_2026-07-05.md  SERENITYMOJO_REUSE_REPORT.md  TRAINER_DRIVER_SEPARATION.md  TRAINING_PARITY_CAMPAIGN.md  TRAINING_READINESS_AUDIT.md  UI_AUDIT_2026-06-12.md  UI_MAP_2026-07-05.md  UI_MODEL_WIRING_2026-06-09.md  UI_WIRING_CAMPAIGN_2026-07-22.md
eguitrainer/: Cargo.toml  README.md
eguitrainer/src/: api.rs  main.rs
parity/: adamw_ref.json  anima_sampler_helper_ref.json  anima_train_ref_blockers.json  anima_train_ref_contract.json  anima_train_ref_meta.json  chroma_sampler_helper_ref.json  chroma_train_ref_blockers.json  chroma_train_ref_contract.json  chroma_train_ref_meta.json  compile_sweep_optim.mojo  ernie_train_ref_blockers.json  ernie_train_ref_contract.json  ernie_train_ref_meta.json  flux2_dev_train_ref_blockers.json  flux2_dev_train_ref_contract.json  gen_anima_sampler_helper_ref.py  (+34 more)
webui/: .gitignore  Cargo.toml  captioner.py  presets.json
webui/board/: board_boot.js  charts.js  index.html
webui/src/: board.rs  captioner.rs  config_merge.rs  main.rs  prepare.rs
webui/static/: index.html
webui/tests/: pw_start_smoke.js
(+850 files in other folders)
