[package]
name = "serenity-eguitrainer"
version = "0.1.0"
edition = "2021"
description = "Native egui frontend for the serenity web trainer supervisor (same /api/* surface as webui/static)."

[[bin]]
name = "serenity-eguitrainer"
path = "src/main.rs"

[dependencies]
# Pinned to the versions EriTrainer already builds offline (same local cargo
# cache). glow backend only — no wgpu, no accesskit.
eframe = { version = "=0.31.1", default-features = false, features = ["glow", "default_fonts", "x11", "wayland"] }
egui = "=0.31.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
# Plain-HTTP client for the localhost/LAN supervisor — no TLS surface needed.
ureq = { version = "=2.12.1", default-features = false }
# PNG/JPEG decode for the sample + dataset galleries.
image = { version = "=0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }

[profile.release]
opt-level = 2
