[package]
name = "serenity-web-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs"] }
futures-core = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }

[profile.release]
opt-level = 2
